# Kronos

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose-swarm.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
app/: database.py  dependencies.py  exceptions.py  main.py
app/celery_workers/: celery_app.py
app/celery_workers/tasks/: document.py  document_version.py
app/config/: settings.py
app/dependencies/: auth.py  infrastructure.py  services.py
app/infrastructure/: __init__.py  celery_client.py  qdrant_gateway.py  redis_client.py
app/models/: __init__.py  collection.py  document.py  document_version.py  user.py
app/repositories/: collection.py  document.py  document_version.py  user.py
app/routers/: admin.py  auth.py  collection.py  document.py  document_version.py
app/schemas/: collection.py  document.py  document_version.py  user.py
app/security/: automation.py
app/services/: __init__.py  celery_service.py  collection_service.py  document_service.py  document_version_service.py  qdrant_service.py  redis_service.py  sql_service.py  user_service.py
app/utils/: document.py
migrations/: env.py
migrations/versions/: 03bf3c61b2a1_add_created_by_and_deletede_by_in_.py  19939972eecc_refactor_sso_users.py  f1dc4e12df97_creacion_de_tablas.py
