[project]
name = "kronos"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "celery>=5.6.3",
    "celery-types>=0.26.0",
    "fastapi>=0.138.2",
    "llama-index-core>=0.14.23",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-vector-stores-qdrant>=0.10.1",
    "openinference-instrumentation-llama-index>=4.4.3",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sqlalchemy>=2.0.51",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]
